# flipper-zero-app

./: .gitignore  Cargo.toml
src/: main.rs
